# sphinx-glossary

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/sphinx_glossary/: __init__.py  docutils_.py  formats.py  sphinx_.py
tests/: test_docutils.py
tests/fixtures/: docutils.txt  docutils_gls_role.txt
