[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_glossary"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Sphinx :: Extension",
]
keywords = ["sphinx", "glossary"]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/chrisjsewell/sphinx-glossary"

[project.optional-dependencies]
develop = ["black", "sphinx>=3,<5", "pytest", "pytest-param-files"]
docs = ["sphinx>=3,<5", "myst-parser", "furo"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
